crates/etch-core/tests/snapshots/corpus_tests__core-lists-mixed.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "List",
        "ordered": true,
        "items": [
          {
            "content": [
              {
                "type": "Paragraph",
                "content": [
                  {
                    "type": "Text",
                    "value": "Boil the water"
                  }
                ]
              }
            ]
          },
          {
            "content": [
              {
                "type": "Paragraph",
                "content": [
                  {
                    "type": "Text",
                    "value": "Add the tea leaves"
                  }
                ]
              }
            ]
          },
          {
            "content": [
              {
                "type": "Paragraph",
                "content": [
                  {
                    "type": "Text",
                    "value": "Let the pot steep"
                  }
                ]
              }
            ]
          }
        ]
      },
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "The kettle can rest here before the packing checklist starts."
          }
        ]
      },
      {
        "type": "List",
        "ordered": false,
        "items": [
          {
            "content": [
              {
                "type": "Paragraph",
                "content": [
                  {
                    "type": "Text",
                    "value": "Fold the camp blanket"
                  }
                ]
              }
            ]
          },
          {
            "content": [
              {
                "type": "Paragraph",
                "content": [
                  {
                    "type": "Text",
                    "value": "Tie the food bag closed"
                  }
                ]
              }
            ]
          },
          {
            "content": [
              {
                "type": "Paragraph",
                "content": [
                  {
                    "type": "Text",
                    "value": "Lock the storage bin"
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  },
  "errors": []
}
