crates/etch-core/tests/snapshots/corpus_tests__core-lists-unordered.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "List",
        "ordered": false,
        "items": [
          {
            "content": [
              {
                "type": "Paragraph",
                "content": [
                  {
                    "type": "Text",
                    "value": "Pack a waterproof jacket"
                  }
                ]
              }
            ]
          },
          {
            "content": [
              {
                "type": "Paragraph",
                "content": [
                  {
                    "type": "Text",
                    "value": "Print the trail permit"
                  }
                ]
              }
            ]
          },
          {
            "content": [
              {
                "type": "Paragraph",
                "content": [
                  {
                    "type": "Text",
                    "value": "Charge the headlamp battery"
                  }
                ]
              }
            ]
          },
          {
            "content": [
              {
                "type": "Paragraph",
                "content": [
                  {
                    "type": "Text",
                    "value": "Fill the metal water bottle"
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  },
  "errors": []
}
