crates/etch-core/tests/snapshots/corpus_tests__core-lists-with-formatting.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "List",
        "ordered": false,
        "items": [
          {
            "content": [
              {
                "type": "Paragraph",
                "content": [
                  {
                    "type": "Text",
                    "value": "Review the **safety checklist** before departure."
                  }
                ]
              }
            ]
          },
          {
            "content": [
              {
                "type": "Paragraph",
                "content": [
                  {
                    "type": "Text",
                    "value": "Leave the *fragile maps* on the top shelf."
                  }
                ]
              }
            ]
          },
          {
            "content": [
              {
                "type": "Paragraph",
                "content": [
                  {
                    "type": "Text",
                    "value": "Run `etch validate notes.etch` before publishing."
                  }
                ]
              }
            ]
          },
          {
            "content": [
              {
                "type": "Paragraph",
                "content": [
                  {
                    "type": "Text",
                    "value": "Read the [field guide](https://docs.etch-lang.dev/guide/field-notes) on the train."
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  },
  "errors": []
}
