crates/etch-core/tests/snapshots/corpus_tests__core-lists-with-nested-block.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "List",
        "ordered": false,
        "items": [
          {
            "content": [
              {
                "type": "Paragraph",
                "content": [
                  {
                    "type": "Text",
                    "value": "Camp briefing for the new arrivals."
                  },
                  {
                    "type": "SoftBreak"
                  },
                  {
                    "type": "Text",
                    "value": "Bring dry socks and a flashlight."
                  }
                ]
              },
              {
                "type": "BlockQuote",
                "content": [
                  {
                    "type": "Paragraph",
                    "content": [
                      {
                        "type": "Text",
                        "value": "Check in before sunset."
                      },
                      {
                        "type": "SoftBreak"
                      },
                      {
                        "type": "Text",
                        "value": "Keep your permit visible."
                      }
                    ]
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  },
  "errors": []
}
