crates/etch-core/tests/snapshots/corpus_tests__core-lists-with-paragraphs.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "List",
        "ordered": false,
        "items": [
          {
            "content": [
              {
                "type": "Paragraph",
                "content": [
                  {
                    "type": "Text",
                    "value": "Camp briefing for the new arrivals."
                  },
                  {
                    "type": "SoftBreak"
                  },
                  {
                    "type": "Text",
                    "value": "Bring dry socks, a flashlight, and a printed map."
                  }
                ]
              },
              {
                "type": "Paragraph",
                "content": [
                  {
                    "type": "Text",
                    "value": "Check in at the ranger station before sunset."
                  }
                ]
              }
            ]
          },
          {
            "content": [
              {
                "type": "Paragraph",
                "content": [
                  {
                    "type": "Text",
                    "value": "Kitchen prep for tomorrow's hike."
                  },
                  {
                    "type": "SoftBreak"
                  },
                  {
                    "type": "Text",
                    "value": "Slice the bread and label each container."
                  }
                ]
              },
              {
                "type": "Paragraph",
                "content": [
                  {
                    "type": "Text",
                    "value": "Leave the soup pot on the back burner overnight."
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  },
  "errors": []
}
