crates/etch-core/tests/snapshots/corpus_tests__core-paragraphs-empty.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": []
  },
  "errors": []
}
