crates/etch-core/tests/snapshots/corpus_tests__core-paragraphs-multi-line.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "This paragraph starts on one line\ncontinues on the next line\nand ends on a third line."
          }
        ]
      }
    ]
  },
  "errors": []
}
